--- a/styles/global_style/style.css
+++ b/styles/global_style/style.css
@@ -1,20 +1,23 @@
 @charset "UTF-8";
 @font-face {
-  font-family: "DM Sans";
+  font-family: 'DM Sans';
   src: url("./../fonts/DMSans-Regular.eot");
   src: local("☺"), url("./../fonts/DMSans-Regular.woff") format("woff"), url("./../fonts/DMSans-Regular.ttf") format("truetype"), url("./../fonts/DMSans-Regular.svg") format("svg");
   font-weight: normal;
   font-style: normal;
 }
+
 @font-face {
-  font-family: "DM Sans";
+  font-family: 'DM Sans';
   src: url("./../fonts/DMSans-Bold.eot");
   src: local("☺"), url("./../fonts/DMSans-Bold.woff") format("woff"), url("./../fonts/DMSans-Bold.ttf") format("truetype"), url("./../fonts/DMSans-Bold.svg") format("svg");
   font-weight: 700;
   font-style: normal;
 }
+
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -29,4 +32,166 @@ h1, h2, h3 {
 .container {
   width: 90%;
   margin: 0 auto;
-}/*# sourceMappingURL=style.css.map */
+}
+
+.episodes__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 400;
+  color: #FFFFFF;
+}
+
+.episodes__header-title {
+  font-size: 4em;
+  line-height: 79px;
+  letter-spacing: 2.88px;
+  color: #FFFFFF;
+}
+
+.episodes__header-btn {
+  width: 178px;
+  height: 51px;
+  background: #118DA8;
+  border-radius: 6px;
+  border: none;
+  font-size: 1.06em;
+  line-height: 27px;
+  color: #FFFFFF;
+}
+
+.episodes__header-btn :hover {
+  cursor: pointer;
+}
+
+.episodes__top,
+.episodes__middle,
+.episodes__bottom {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 30% 65%;
+      grid-template-columns: 30% 65%;
+  background-color: #000000;
+  border-radius: 32px;
+  padding: 1.5em;
+  margin-bottom: 2em;
+}
+
+.episodes__top-1,
+.episodes__middle-1,
+.episodes__bottom-1 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+}
+
+.episodes__top-1 img,
+.episodes__middle-1 img,
+.episodes__bottom-1 img {
+  width: 95%;
+  max-width: 100%;
+}
+
+.episodes__top-2,
+.episodes__middle-2,
+.episodes__bottom-2 {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  width: 80%;
+}
+
+.episodes__top-2-content,
+.episodes__middle-2-content,
+.episodes__bottom-2-content {
+  width: 73px;
+  height: 27px;
+  background-color: #191919;
+  border-radius: 6px;
+  border: none;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.13em;
+  line-height: 27px;
+  color: #FFFFFF;
+}
+
+.episodes__top-2-number,
+.episodes__middle-2-number,
+.episodes__bottom-2-number {
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.06em;
+  line-height: 27px;
+  color: #118DA8;
+}
+
+.episodes__top-2-title,
+.episodes__middle-2-title,
+.episodes__bottom-2-title {
+  margin: 0;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 4em;
+  line-height: 70px;
+  letter-spacing: 2.56px;
+  color: #FFFFFF;
+}
+
+.episodes__top-2-text,
+.episodes__middle-2-text,
+.episodes__bottom-2-text {
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.38em;
+  line-height: 33px;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.episodes__top-2-btn,
+.episodes__middle-2-btn,
+.episodes__bottom-2-btn {
+  width: 208px;
+  height: 51px;
+  background: #118DA8;
+  border-radius: 6px;
+  border: none;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.13em;
+  line-height: 27px;
+  color: #FFFFFF;
+}
+
+.episodes__top-2-btn :hover,
+.episodes__middle-2-btn :hover,
+.episodes__bottom-2-btn :hover {
+  cursor: pointer;
+}
+/*# sourceMappingURL=style.css.map */
