--- a/styles/global_style/style.css
+++ b/styles/global_style/style.css
@@ -1,20 +1,23 @@
 @charset "UTF-8";
 @font-face {
-  font-family: "DM Sans";
+  font-family: 'DM Sans';
   src: url("./../../fonts/DMSans-Regular.eot");
   src: local("☺"), url("./../../fonts/DMSans-Regular.woff") format("woff"), url("./../../fonts/DMSans-Regular.ttf") format("truetype"), url("./../../fonts/DMSans-Regular.svg") format("svg");
   font-weight: 400;
   font-style: normal;
 }
+
 @font-face {
-  font-family: "DM Sans";
+  font-family: 'DM Sans';
   src: url("./../../fonts/DMSans-Bold.eot");
   src: local("☺"), url("./../../fonts/DMSans-Bold.woff") format("woff"), url("./../../fonts/DMSans-Bold.ttf") format("truetype"), url("./../../fonts/DMSans-Bold.svg") format("svg");
   font-weight: 700;
   font-style: normal;
 }
+
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -32,21 +35,32 @@ h1, h2, h3 {
   margin: 0 auto;
 }
 
-.episodes__header {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-  font-family: "DM Sans";
+.episodes {
+  font-family: 'DM Sans';
   font-style: normal;
   font-weight: 400;
+}
+
+.episodes__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
   color: #FFFFFF;
 }
+
 .episodes__header-title {
   font-size: 4em;
   line-height: 79px;
   letter-spacing: 2.88px;
   color: #FFFFFF;
 }
+
 .episodes__header-btn {
   width: 178px;
   height: 51px;
@@ -57,6 +71,7 @@ h1, h2, h3 {
   line-height: 27px;
   color: #FFFFFF;
 }
+
 .episodes__header-btn :hover {
   cursor: pointer;
 }
@@ -64,81 +79,94 @@ h1, h2, h3 {
 .episodes__top,
 .episodes__middle,
 .episodes__bottom {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 30% 65%;
+  /*grid-template-columns: 40% 60%;*/
+  -ms-grid-columns: (minmax(max-content, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(-webkit-max-content, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(max-content, 1fr));
+  gap: 1em;
   background-color: #000000;
   border-radius: 32px;
-  padding: 1.5em;
+  padding: 2em;
   margin-bottom: 2em;
 }
+
 .episodes__top-1,
 .episodes__middle-1,
 .episodes__bottom-1 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
   grid-column: 1/2;
 }
+
 .episodes__top-1 img,
 .episodes__middle-1 img,
 .episodes__bottom-1 img {
   width: 95%;
   max-width: 100%;
 }
+
 .episodes__top-2,
 .episodes__middle-2,
 .episodes__bottom-2 {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
   grid-column: 2/3;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  width: 80%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
+
 .episodes__top-2-content,
 .episodes__middle-2-content,
 .episodes__bottom-2-content {
-  width: 73px;
+  padding: 0;
+  margin-bottom: 1.5em;
   height: 27px;
   background-color: #191919;
   border-radius: 6px;
   border: none;
-  font-family: "DM Sans";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 1.13em;
+  font-size: 1.1em;
   line-height: 27px;
   color: #FFFFFF;
 }
+
 .episodes__top-2-number,
 .episodes__middle-2-number,
 .episodes__bottom-2-number {
-  font-family: "DM Sans";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 1.06em;
+  margin-bottom: 18px;
+  font-size: 1em;
   line-height: 27px;
   color: #118DA8;
 }
+
 .episodes__top-2-title,
 .episodes__middle-2-title,
 .episodes__bottom-2-title {
-  margin: 0;
-  font-family: "DM Sans";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 4em;
+  margin: 0 0 0.3em;
+  font-size: 3em;
   line-height: 70px;
   letter-spacing: 2.56px;
   color: #FFFFFF;
 }
+
 .episodes__top-2-text,
 .episodes__middle-2-text,
 .episodes__bottom-2-text {
-  font-family: "DM Sans";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 1.38em;
+  margin-bottom: 18px;
+  font-size: 1.1em;
   line-height: 33px;
   color: rgba(255, 255, 255, 0.7);
 }
+
 .episodes__top-2-btn,
 .episodes__middle-2-btn,
 .episodes__bottom-2-btn {
@@ -147,64 +175,106 @@ h1, h2, h3 {
   background: #118DA8;
   border-radius: 6px;
   border: none;
-  font-family: "DM Sans";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 1.13em;
+  font-size: 1.1em;
   line-height: 27px;
   color: #FFFFFF;
 }
+
 .episodes__top-2-btn :hover,
 .episodes__middle-2-btn :hover,
 .episodes__bottom-2-btn :hover {
   cursor: pointer;
 }
 
+.episodes__top-2-content,
+.episodes__bottom-2-content {
+  width: 73px;
+}
+
+.episodes__middle-2-content {
+  width: 136px;
+}
+
 .jacob {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  -moz-column-gap: 5%;
-       column-gap: 5%;
+  -webkit-column-gap: 5%;
+          column-gap: 5%;
 }
+
 .jacob__intro {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
+
 .jacob__intro-paragraph {
   color: #118DA8;
 }
+
 .jacob__intro-text {
-  color: rgba(255, 255, 255, 0.6980392157);
+  color: #FFFFFFB2;
 }
+
 .jacob__image {
-  flex-basis: 45%;
+  -ms-flex-preferred-size: 45%;
+      flex-basis: 45%;
 }
 
 .subscribe {
   height: 40%;
   background-color: #000000;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   border-radius: 32px;
 }
+
 .subscribe__header {
-  flex-basis: 55%;
+  -ms-flex-preferred-size: 55%;
+      flex-basis: 55%;
   padding-left: 60px;
 }
+
 .subscribe__header-title {
   font-size: 70px;
 }
+
 .subscribe__header-paragraph {
   color: #118DA8;
 }
+
 .subscribe__form {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 5px;
-  justify-content: center;
-  align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
+
 .subscribe__form-input {
   background-color: #191919;
   border: 1px solid #191919;
@@ -212,58 +282,82 @@ h1, h2, h3 {
   height: 10vh;
   width: 35vw;
 }
-.subscribe__form-input::-moz-placeholder {
-  font-family: "DMSans";
-  color: rgba(255, 255, 255, 0.6980392157);
+
+.subscribe__form-input::-webkit-input-placeholder {
+  font-family: 'DMSans';
+  color: #FFFFFFB2;
   padding-left: 19px;
   font-size: 20px;
 }
+
 .subscribe__form-input:-ms-input-placeholder {
-  font-family: "DMSans";
-  color: rgba(255, 255, 255, 0.6980392157);
+  font-family: 'DMSans';
+  color: #FFFFFFB2;
   padding-left: 19px;
   font-size: 20px;
 }
+
+.subscribe__form-input::-ms-input-placeholder {
+  font-family: 'DMSans';
+  color: #FFFFFFB2;
+  padding-left: 19px;
+  font-size: 20px;
+}
+
 .subscribe__form-input::placeholder {
-  font-family: "DMSans";
-  color: rgba(255, 255, 255, 0.6980392157);
+  font-family: 'DMSans';
+  color: #FFFFFFB2;
   padding-left: 19px;
   font-size: 20px;
 }
+
 .subscribe__form-button {
   background: #118DA8;
   height: 51px;
   border-radius: 6px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-size: 15px;
   width: 87px;
   color: rgba(255, 255, 255, 0.7);
 }
+
 .subscribe__form-button span {
-  font-family: "DM Sans";
+  font-family: 'DM Sans';
   color: #FFFFFF;
 }
 
 .reviews {
   margin-bottom: 200px;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  grid-template-rows: repeat(2, 1fr);
+  -ms-grid-columns: (minmax(350px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  -ms-grid-rows: (1fr)[2];
+      grid-template-rows: repeat(2, 1fr);
   gap: 16px;
 }
+
 .reviews__item {
   padding: 64px 60px 51px 50px;
   border-radius: 32px;
   background-color: #000;
 }
+
 .reviews__star {
   width: 100px;
   height: 18px;
   background-image: url(./../../assets/img/star.svg);
   background-repeat: space;
 }
+
 .reviews__title {
   font-size: 36px;
   line-height: 43px;
@@ -272,49 +366,69 @@ h1, h2, h3 {
 
 .footer {
   margin-bottom: 117px;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(179px, 1fr));
+  -ms-grid-columns: (minmax(179px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(179px, 1fr));
 }
+
 .footer__item {
   margin-right: 16px;
 }
+
 .footer__item:first-child {
   margin-bottom: 30px;
 }
+
 .footer__item:nth-child(2) {
   justify-self: flex-end;
 }
+
 .footer__item:last-child {
   margin-right: 0;
 }
+
 .footer__nav {
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
+
 .footer__nav li {
   margin-bottom: 25px;
 }
+
 .footer__link {
   font-size: 17px;
   line-height: 27px;
   text-decoration: none;
   color: #fff;
 }
+
 .footer__social {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
+
 .footer__logo {
   margin-bottom: 20px;
 }
+
 .footer__icon {
   margin-right: 10px;
 }
+
 .footer__apps {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
+
 .footer__app {
   margin-right: 17px;
 }
@@ -324,6 +438,7 @@ h1, h2, h3 {
     justify-self: flex-start;
   }
 }
+
 @media (max-width: 398px) {
   .reviews {
     margin-bottom: 80px;
@@ -331,4 +446,5 @@ h1, h2, h3 {
   .footer {
     padding-left: 50px;
   }
-}/*# sourceMappingURL=style.css.map */
+}
+/*# sourceMappingURL=style.css.map */
