--- a/styles/global_style/style.scss
+++ b/styles/global_style/style.scss
@@ -48,13 +48,15 @@ h1, h2, h3{
 
 //styles for section 'episodes' start
 
+.episodes{
+	font-family: 'DM Sans';
+	font-style: normal;
+	font-weight: 400;
+}
 .episodes__header{
 	display: flex;
 	justify-content: space-between;
 	align-items: baseline;
-	font-family: 'DM Sans';
-	font-style: normal;
-	font-weight: 400;
 	color: #FFFFFF;
 
 	&-title{
@@ -83,10 +85,12 @@ h1, h2, h3{
 .episodes__middle,
 .episodes__bottom{
 	display: grid;
-	grid-template-columns: 30% 65%;
+	/*grid-template-columns: 40% 60%;*/
+	grid-template-columns: repeat(auto-fit, minmax(max-content, 1fr));
+	gap: 1em;
 	background-color: #000000;
 	border-radius: 32px;
-	padding: 1.5em;
+	padding: 2em;
 	margin-bottom: 2em;
 	
 	&-1{
@@ -103,48 +107,37 @@ h1, h2, h3{
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		align-items: flex-start;
-		width: 80%;
 
 		&-content{
-			width: 73px;
+			padding: 0;
+			margin-bottom: 1.5em;
 			height: 27px;
 			background-color: #191919;
 			border-radius: 6px;
 			border: none;
-			font-family: 'DM Sans';
-			font-style: normal;
-			font-weight: 400;
-			font-size: 1.13em;
+			font-size: 1.1em;
 			line-height: 27px;
 			color: #FFFFFF;
 		}
 
 		&-number{
-			font-family: 'DM Sans';
-			font-style: normal;
-			font-weight: 400;
-			font-size: 1.06em;
+			margin-bottom: 18px;
+			font-size: 1em;
 			line-height: 27px;
 			color: #118DA8;
 		}
 
 		&-title{
-			margin: 0;
-			font-family: 'DM Sans';
-			font-style: normal;
-			font-weight: 400;
-			font-size: 4em;
+			margin: 0 0 0.3em;
+			font-size: 3em;
 			line-height: 70px;
 			letter-spacing: 2.56px;
 			color: #FFFFFF;
 		}
 
 		&-text{
-			font-family: 'DM Sans';
-			font-style: normal;
-			font-weight: 400;
-			font-size: 1.38em;
+			margin-bottom: 18px;
+			font-size: 1.1em;
 			line-height: 33px;
 			color: rgba(255, 255, 255, 0.7);
 		}
@@ -155,10 +148,7 @@ h1, h2, h3{
 			background: #118DA8;
 			border-radius: 6px;
 			border: none;
-			font-family: 'DM Sans';
-			font-style: normal;
-			font-weight: 400;
-			font-size: 1.13em;
+			font-size: 1.1em;
 			line-height: 27px;
 			color: #FFFFFF;
 
@@ -167,6 +157,13 @@ h1, h2, h3{
 				}
 		}
 	}
+}
+.episodes__top-2-content,
+.episodes__bottom-2-content{
+	width: 73px;
+}
+.episodes__middle-2-content{
+	width: 136px;
 }
 //section 'episodes' end
 
