--- a/styles/global_style/style.css
+++ b/styles/global_style/style.css
@@ -56,6 +56,7 @@ h3 {
 }
 .nav__link {
   margin-right: 5%;
+  font-family: "DM Sans";
   color: white;
   text-decoration: none;
   font-size: 17px;
@@ -99,6 +100,9 @@ h3 {
   width: 70%;
   display: flex;
   justify-content: space-between;
+}
+.home__link {
+  font-family: "DM Sans";
 }
 .home__link:hover img {
   filter: opacity(25%);
