--- a/styles/global_style/style.css
+++ b/styles/global_style/style.css
@@ -202,10 +202,8 @@ h3 {
 .episodes__bottom {
   display: -ms-grid;
   display: grid;
-  /*grid-template-columns: 40% 60%;*/
-  -ms-grid-columns: (minmax(max-content, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(-webkit-max-content, 1fr));
-      grid-template-columns: repeat(auto-fit, minmax(max-content, 1fr));
+  -ms-grid-columns: 40% 60%;
+      grid-template-columns: 40% 60%;
   gap: 2em;
   background-color: #000000;
   border-radius: 32px;
@@ -244,6 +242,7 @@ h3 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  width: 95%;
 }
 
 .episodes__top-2-content,
@@ -344,7 +343,31 @@ h3 {
   .episodes__top-1,
   .episodes__middle-1,
   .episodes__bottom-1 {
-    display: none;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .episodes__top-1 img,
+  .episodes__middle-1 img,
+  .episodes__bottom-1 img {
+    width: 50%;
+    max-width: 100%;
+  }
+  .episodes__top-2,
+  .episodes__middle-2,
+  .episodes__bottom-2 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
   }
   .episodes__top-2-title,
   .episodes__middle-2-title,
@@ -352,6 +375,12 @@ h3 {
     font-size: 1.7em;
     line-height: 1.3em;
   }
+  .episodes__top-2-content,
+  .episodes__middle-2-content,
+  .episodes__bottom-2-content,
+  .episodes__top-2-number,
+  .episodes__middle-2-number,
+  .episodes__bottom-2-number,
   .episodes__top-2-text,
   .episodes__middle-2-text,
   .episodes__bottom-2-text {
