--- a/styles/global_style/style.scss
+++ b/styles/global_style/style.scss
@@ -188,8 +188,7 @@ h3 {
 .episodes__middle,
 .episodes__bottom{
 	display: grid;
-	/*grid-template-columns: 40% 60%;*/
-	grid-template-columns: repeat(auto-fit, minmax(max-content, 1fr));
+	grid-template-columns: 40% 60%;
 	gap: 2em;
 	background-color: #000000;
 	border-radius: 32px;
@@ -210,6 +209,7 @@ h3 {
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
+		width: 95%;
 
 		&-content{
 			padding: 0;
@@ -289,7 +289,20 @@ h3 {
 	.episodes__top-1,
 	.episodes__middle-1,
 	.episodes__bottom-1{
-		display: none;
+		grid-column: 1/3;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+		img{
+			width: 50%;
+			max-width: 100%;
+		}
+	}
+	.episodes__top-2,
+	.episodes__middle-2,
+	.episodes__bottom-2{
+		grid-column: 1/3;
 	}
 	.episodes__top-2-title,
 	.episodes__middle-2-title,
@@ -297,6 +310,12 @@ h3 {
 		font-size: 1.7em;
 		line-height: 1.3em;
 	}
+	.episodes__top-2-content,
+	.episodes__middle-2-content,
+	.episodes__bottom-2-content,
+	.episodes__top-2-number,
+	.episodes__middle-2-number,
+	.episodes__bottom-2-number,
 	.episodes__top-2-text,
 	.episodes__middle-2-text,
 	.episodes__bottom-2-text{
