--- a/styles/global_style/style.css
+++ b/styles/global_style/style.css
@@ -340,12 +340,18 @@ h3 {
   .episodes__header-btn {
     margin-bottom: 1em;
   }
+  .episodes__top,
+  .episodes__middle,
+  .episodes__bottom {
+    gap: 0;
+  }
   .episodes__top-1,
   .episodes__middle-1,
   .episodes__bottom-1 {
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-column: 1/3;
+    margin-bottom: 1em;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
