--- a/styles/global_style/style.scss
+++ b/styles/global_style/style.scss
@@ -286,16 +286,22 @@ h3 {
 				margin-bottom: 1em;
 			}
 	}
+	.episodes__top,
+	.episodes__middle,
+	.episodes__bottom{
+		gap: 0;
+	}
 	.episodes__top-1,
 	.episodes__middle-1,
 	.episodes__bottom-1{
 		grid-column: 1/3;
+		margin-bottom: 1em;
 		display: flex;
 		justify-content: center;
 		align-items: center;
 
 		img{
-			width: 50%;
+			width:50%;
 			max-width: 100%;
 		}
 	}
